temp. fix: added overflow hidden to body

--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@
 body {
 	margin: 0;
 	font-family: "JetBrains Mono", monospace;
+	overflow: hidden; /** TODO: This was lazily implemented, idk how to fix anymore... **/
 }
 
 /* TODO: see whats up with the (replaced) 1fr on rows */
